Trying to get somewhere with the project

--- a/ninety-nine-cats/app/views/cats/_cat.html.erb
+++ b/ninety-nine-cats/app/views/cats/_cat.html.erb
@@ -1,6 +1,6 @@
 <ul>
     <% if action == :index  %>
-        <li> <a href="<%= cat_url(cat.id) %>"> Cats show page </a> </li>
+        <li> <a href="<%= cats_url(cat.id) %>"> Cats show page </a> </li>
     <% else %>
         <li> <a href="<%= cats_url%>"> Cats index page </a> </li>
     <% end %>
