Added edit functionality to cats

--- a/ninety-nine-cats/app/views/cats/new.html.erb
+++ b/ninety-nine-cats/app/views/cats/new.html.erb
@@ -2,7 +2,7 @@
 <p>Find me in app/views/cat/new.html.erb</p>
 
 <form action="<%= cats_url %>" method="post">
-<%# 
+<%#
  <input type="hidden" name="_method" value="patch"> %>
 
     <label for="name"> name:
@@ -38,10 +38,10 @@
     <br>
     <br>
 
-    <label for="birthday"> Birthday:
+    <label for="birthdate"> birthdate:
     </label>
 
-    <input type="date" id="birthday" name="cat[birthday]">
+    <input type="date" id="birthdate" name="cat[birthdate]">
     <br>
 
     <br>
