--- a/ninety-nine-cats/app/views/cats/edit.html.erb
+++ b/ninety-nine-cats/app/views/cats/edit.html.erb
@@ -1,55 +1,2 @@
-<h1>Cat#new</h1>
-<p>Find me in app/views/cat/new.html.erb</p>
+<%= render 'form', cat: @cat %>
 
-<form action="<%= cat_url(@cat.id)%>" method="post">
-
- <input type="hidden" name="_method" value="patch">
-
-    <label for="name"> name:
-    </label>
-
-    <input id="name" type="text" name="cat[name]"
-    value="<%=@cat.name%>">
-
-    <br />
-    <br />
-
-    <label for="color"> Color:
-    </label>
-
-    <select id="color" name="cat[color]"  >
-        <option selected disabled hidden>Choose Color</option>
-        <option value="<%=@cat.color%>" > Black</option>
-        <option value="<%=@cat.color%>" > White</option>
-        <option value="<%=@cat.color%>" > Orange</option>
-        <option value="<%=@cat.color%>" > Gray</option>
-    </select>
-
-    <br>
-    <br>
-
-    <label> Male
-    <input id="sex" type="radio" name="cat[sex]" value="<%=@cat.sex%>"  >
-    </label>
-
-    <label> Female
-    <input type="radio" name="cat[sex]" value="<%=@cat.sex%>" >
-    </label>
-
-    <br>
-    <br>
-
-    <label for="birthdate"> Birthday:
-    </label>
-
-    <input type="date" id="birthdate" name="cat[birthdate]" value="<%=@cat.birthdate%>">
-    <br>
-
-    <br>
-
-    <label for="descript"> Description:
-    </label>
-    <br>
-
-    <textarea  name="cat[descreiption]" rows="6" cols="25" > <%=@cat.description%>"
-    </textarea>
